# popsicle-ng

./: .gitignore  Cargo.toml  Makefile  README.md  appimage.sh  appimagecraft.yml  build.sh  com.system76.Popsicle.json
cli/: Cargo.toml
cli/src/: main.rs
debian/: changelog  control  copyright  popsicle-gtk.install  popsicle.install
gtk/: Cargo.toml
gtk/assets/: com.system76.Popsicle.appdata.xml  com.system76.Popsicle.desktop  resources.gresource.xml
gtk/src/: gresource.rs  main.rs
gtk/src/app/: mod.rs
gtk/src/app/events/: mod.rs
gtk/src/app/signals/: images.rs
i18n/en/: popsicle_cli.ftl  popsicle_gtk.ftl
src/: codec.rs
