[package]
name = "popsicle_cli"
description = "Popsicle CLI"
version = "1.3.1"
authors = [ "Jeremy Soller <jeremy@system76.com>", "Alexander Frick <alex313031@gmail.com>" ]
license = "MIT"
readme = "README.md"
edition = "2021"

[[bin]]
name = "popsicle-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
async-std = "1.12.0"
atty = "0.2.14"
better-panic = "0.3.0"
cascade = "1.0.1"
clap = "4.0.32"
derive-new = "0.5.9"
fomat-macros = "0.3.2"
futures = "0.3.26"
futures_codec = "0.4.1"
i18n-embed = { version = "0.13.8", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.5"
libc = "0.2.139"
once_cell = "1.16.0"
pbr = "1.0.4"
popsicle-ng = { path = ".." }
rust-embed = { version = "6.4.2", features = ["debug-embed"] }
