[package]
name = "popsicle_gtk"
description = "Popsicle-ng USB Flasher"
version = "1.3.1"
authors = [ "Michael Aaron Murphy <michael@system76.com>", "Alexander Frick <alex313031@gmail.com>" ]
license = "MIT"
readme = "README.md"
edition = "2021"

[[bin]]
name = "popsicle-ng-gtk"
path = "src/main.rs"

[dependencies]
atomic = "0.5.1"
anyhow = "1.0.69"
bytesize = "1.1.0"
cascade = "1.0.1"
crossbeam-channel = "0.5.7"
dbus = "0.9.7"
dbus-udisks2 = { git = "https://github.com/Alex313031/dbus-udisks2" }
digest = "0.10.6"
futures = "0.3.26"
futures_codec = "0.4.1"
gdk = "0.15.4"
gdk-pixbuf = "0.15.11"
gio = "0.15.12"
glib = "0.15.12"
gtk = { version = "0.15.5", features = ["v3_22"] }
hex-view = "0.1.3"
iso9660 = { git = "https://github.com/ids1024/iso9660-rs" }
libc = "0.2.139"
md-5 = "0.10.5"
pango = "0.15.10"
popsicle_ng = { path = ".." }
pwd = "1.4.0"
sha2 = "0.10.6"
sha-1 = { version = "0.10.1", features = ["asm"] }
sys-mount = "1.5.1"
async-std = "1.12.0"
i18n-embed = { version = "0.13.8", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.5"
rust-embed = { version = "6.4.2", features = ["debug-embed"] }
once_cell = "1.16.0"
